# pyo3bug340

./: Cargo.toml
src/: lib.rs
